# simple_blockchain

./: .env  Cargo.toml  dump.rdb  redis.sh
src/: block.rs  chain.rs  chain_block.rs  lib.rs  main.rs
src/blockchain/: block.rs  chain.rs
src/network/: mod.rs
src/server/: block.rs
src/storage/: mod.rs
