[package]
name = "full_blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
sha2 = "0.10.6"
tokio = "1.22.0"
anyhow = "1.0"
hex = "0.4"
rocket = {version="0.5.0-rc.2" , features=["json"]}
redis = { version = "0.22.1", features = ["tokio-comp", "json"] }

